# accesspdf

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
OldDocs/: accesspdf-prd.docx  accesspdf-readme.docx  accesspdf-roadmap.docx  accesspdf-technical-architecture.docx
accesspdf/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  models.py  pipeline.py  reporter.py  writer.py
accesspdf/alttext/: __init__.py  extract.py  injector.py  sidecar.py
accesspdf/processors/: __init__.py  _pdf_helpers.py  _text_extract.py  base.py  bookmarks.py  headings.py  links.py  metadata.py  reading_order.py  tables.py  tagger.py
accesspdf/providers/: __init__.py  anthropic.py  base.py  gemini.py  noop.py  ollama.py  openai.py
accesspdf/review/: __init__.py  app.py  renderer.py  widgets.py
accesspdf/utils/: __init__.py  contrast.py
accesspdf/web/: __init__.py  app.py
accesspdf/web/templates/: index.html
docs/: CLAUDE.md  pyproject.toml
files/: accesspdf-prd-v2.docx  accesspdf-readme-v2.docx  accesspdf-roadmap-v2.docx  accesspdf-technical-architecture-v3.docx
tests/: conftest.py  test_analyzer.py  test_batch.py  test_bookmarks.py  test_config.py  test_contrast.py  test_extract.py  test_headings.py  test_injector.py  test_links.py  test_metadata.py  test_models.py  test_pipeline_integration.py  test_providers.py  test_review_app.py  test_sidecar.py  test_tables.py  test_tagger.py  test_web.py
tests/corpus/: images.alttext.yaml
tests/fixtures/: generate.py
tests/utils/: validate.py
